# near-single-sided-staking

./: Cargo.toml  README.md  build_docker_m1.sh  build_local.sh  rustfmt.toml
contract/src/: account.rs  admin.rs  events.rs  ft.rs  lib.rs  staking.rs  utils.rs  views.rs
contract/tests/workspaces/: main.rs
